src/test/deca/syntax/invalid/test43_method.deca
// Description:
//    Programme testant les corps de methodes.
//	  Etape(s) : A
// 	  Lexicalement : OUI
//	  Syntaxiquement : NON
//	  Contextuellement : NON
//
// Resultats:
// 	  test_lex : pas d'erreur
//    test_synt : erreur ligne 18 : mismatched input 'i' expecting 
//
// Historique:
//    cree le 17/01/2020

class A {
	protected string i;
	int fct(int a)
		asm (i);
}